fix - change center to stretch

--- a/src/app/shared/components/custom-card/custom-card.component.scss
+++ b/src/app/shared/components/custom-card/custom-card.component.scss
@@ -96,7 +96,7 @@
 }
 
 .card-content-inner-content {
-  align-items: center;
+  align-items: stretch;
   align-self: stretch;
   display: flex;
   flex-direction: column;
